For a detailed list of changes see the repository Log at:
   http://code.google.com/p/wfdb-app-toolbox/source/list

0.9.5 (TBA):
	Added EDR. 
	
0.9.4.3 (06 November 2013):
	Fixed libcurl and path issue.

0.9.4.2 (05 November 2013):
	Added more diagnostic information and fixed some issues with using spaces in Windows directories.
	
0.9.4.1 (04 November 2013):
	Fixed library path issues with Windows systems.
	
0.9.4 (01 November 2013):
	Updated native libs to WFDB 10.5.20. Added a LightWave interface: WFDBTOOL.
	Fixed bugs in WRANN, RDANN, RDSAMP. Included libcurl with native libs.
  
0.9.3 (22 August 2013):
	Fixed bias issues with SCORE2013.
	
0.9.2 (15 August 2013):
	Fixed issues with WFDBUPDATE and SCORE2013.

0.9.1 (12 July 2013):
	Added: MAPRECORD. Fixed parsing issues with RDANN and added option
	to load specific annotation types only.

0.9.0 (24 June 2013):
	Added: WFDBUPDATE, BXB, MXM, SUMANN, SORTANN, WABP, LOMB, and 
	RDMIMIC2WAVE. Fixed bug and performance issues with RDANN and
	RDSAMP.
	
0.0.2 (13 June 2013):
	Added score2013 to score PhysioNet2013 challenge entries.
	Fixed MATLAB/WDDB indexing issues with RDANN and WRANN.
	Allowed scalar parameters into WRANN.
	Added external logging capabilities to the Java wrappers.
	
0.0.1 (11 June 2013):
	Initial beta release. 